--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,10 @@ html {
   padding: 166px 0 180px;
 }
 
+.main__testimonials {
+  padding-bottom: 195px;
+}
+
 .button {
   display: inline-block;
   padding: 0 40px;
@@ -591,15 +595,8 @@ html {
 /* ====================================================================================== */
 /* ====================================================================================== */
 
-.main__team {
-}
-
 .team {
-  background: url('../images/decor/team-bg.svg') 150px 50px no-repeat, #F4F5F7;
-}
-
-
-.team__inner {
+  background: url("../images/decor/team-bg.svg") calc(50% + 160px) calc(50% + -140px) no-repeat, #f4f5f7;
 }
 
 .team__heading {
@@ -677,11 +674,7 @@ html {
     #1e212c 100%
   );
   transform: translateY(50%);
-  transition: all .3s;
-}
-
-.team__sotials-item {
-
+  transition: all 0.3s;
 }
 
 .team__sotials-item {
@@ -698,7 +691,7 @@ html {
 }
 
 .team__sotials-link path {
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
 .team__sotials-link:hover path {
@@ -729,8 +722,8 @@ html {
   width: 48px;
   height: 48px;
   border-radius: 50%;
-  background: #FF3F3A;
-  transition: all .3s;
+  background: #ff3f3a;
+  transition: all 0.3s;
 }
 
 .team__arrow:hover::after {
@@ -744,4 +737,203 @@ html {
 
 .team__arrow-prev {
   margin-right: 30px;
+}
+
+/* ====================================================TESTIMONIALS======================================================================
+=======================================================TESTIMONIALS======================================================================*/
+
+.testimonials {
+  position: relative;
+  background: #f4f5f7;
+}
+
+.testimonials::before {
+  content: "";
+  top: 50%;
+  left: 50%;
+  transform: translate(-45%, -56%);
+  position: absolute;
+  background: url('../images/decor/testi-bg.svg') 0 0 / 100% no-repeat;
+  width: 1971px;
+  height: 816px;
+}
+
+.testimonials__inner {
+  position: relative;
+  z-index: 1;
+}
+
+.testimonials__heading {
+  margin-bottom: 60px;
+}
+
+.heading__text--center {
+}
+
+.heading {
+}
+
+.heading__subtitle {
+}
+
+.heading__title {
+}
+
+.testimonials__slider-wrapper {
+  position: relative;
+  padding: 0 50px;
+  margin-bottom: 45px;
+}
+
+.testimonials__slider {
+  max-width: 1020px;
+  margin: 0 auto;
+  box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.08),
+    0px 30px 24px -10px rgba(154, 156, 165, 0.05),
+    0px 12px 10px -6px rgba(154, 156, 165, 0.04),
+    0px 4px 4px -4px rgba(30, 33, 44, 0.03);
+}
+
+.testimonials__slide {
+  background: #ffffff;
+  padding: 64px;
+  border-radius: 4px;
+}
+
+.testimonials__slide-inner {
+  margin: 0 auto;
+  max-width: 810px;
+  padding-left: 58px;
+}
+
+.testimonials__quote {
+  position: relative;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.5;
+  margin-bottom: 24px;
+}
+
+.testimonials__quote::before {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: -58px;
+  background: url("../images/icons/quote-icon.svg") 0 0 / 100% no-repeat;
+  width: 28px;
+  height: 20px;
+}
+
+.testimonials__user {
+  display: flex;
+}
+
+.testimonials__avatar {
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.testimonials__user-info {
+  margin-left: 20px;
+}
+
+.testimonials__user-name {
+  line-height: 1.6;
+  color: #1e212c;
+  margin-bottom: 4px;
+}
+
+.testimonials__user-position {
+  font-size: 14px;
+  color: #787a80;
+}
+
+.testimonials__arrow {
+  display: flex;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 50px;
+  align-items: center;
+  z-index: 3;
+  /* align-items: center; */
+}
+
+.testimonials__arrow-prev {
+  left: 0;
+}
+
+.testimonials__arrow-next {
+  right: 0;
+  justify-content: flex-end;
+}
+
+.testimonials__arrow::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  background: #ff3f3a;
+  z-index: -1;
+  transition: all 0.3s;
+}
+
+.testimonials__arrow-prev::before {
+  transform: translate(-50%, -50%) scale(0);
+  left: 23%;
+}
+
+.testimonials__arrow-next::before {
+  transform: translate(50%, -50%) scale(0);
+  right: 23%;
+}
+
+.testimonials__arrow-prev:hover::before {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.testimonials__arrow-next:hover::before {
+  transform: translate(50%, -50%) scale(1);
+}
+
+.testimonials__arrow path {
+  transition: all 0.3s;
+}
+
+.testimonials__arrow:hover path {
+  fill: #fff;
+}
+
+.testimonials__dots .slick-dots {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.testimonials__dots li {
+  margin-right: 12px;
+}
+
+.testimonials__dots button {
+  background-color: transparent;
+  font-size: 0;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+}
+
+.testimonials__dots button::before {
+  content: "";
+  width: 100%;
+  height: 3px;
+  border-radius: 3px;
+  background-color: #b3b7bc;
+  transition: all 0.3s;
+}
+
+.testimonials__dots .slick-active button::before {
+  background-color: #424551;
 }
