--- a/css/style.css
+++ b/css/style.css
@@ -1143,7 +1143,7 @@ html {
   font-size: 14px;
   line-height: 150%;
   margin-bottom: 8px;
-  margin: 0 -12px;
+  margin: 0 -12px 8px;
 }
 
 .blog__category {
