--- a/css/style.css
+++ b/css/style.css
@@ -1380,6 +1380,11 @@ html {
   margin-right: 30px;
 }
 
+.questions__image img {
+  width: 100%;
+  height: 100%;
+}
+
 .questions__heading {
   margin-bottom: 40px;
 }
@@ -1457,7 +1462,9 @@ html {
 }
 
 .questions__checkbox-default:checked + .questions__checkbox-custom {
-  background: url("../images/icons/check.svg") 50% 50% / 100% no-repeat, #ff3f3a;
+  background: url("../images/icons/check.svg") 50% 50% / 62% no-repeat, #ff3f3a;
+  padding: 4px 3px;
+  border: none;
 }
 
 .questions__checkbox-custom {
@@ -1475,5 +1482,4 @@ html {
   width: 100%;
   align-self: center;
 }
-.button {
-}
+
