--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,7 @@ html {
 .header__btn-box {
   display: flex;
   align-items: center;
+  padding: 28px;
 }
 
 .header__top-btn {
@@ -185,7 +186,7 @@ html {
 .header__user-nav {
   position: relative;
   white-space: nowrap;
-  padding: 28px;
+  padding-left: 28px;
 }
 
 .header__user-btn {
@@ -262,7 +263,7 @@ html {
   align-items: center;
   justify-content: space-between;
   color: #1e212c;
-  margin-bottom: 80px;
+  margin: 40px 0 80px;
 }
 
 .header__row > span {
@@ -1486,9 +1487,6 @@ html {
   background-color: #1e212c;
 }
 
-.container {
-}
-
 .footer__top-inner {
   display: flex;
   justify-content: space-between;
@@ -1552,9 +1550,6 @@ html {
 .footer__top-col:last-child .footer__top-title {
   white-space: normal;
   margin-bottom: 24px;
-}
-
-.footer__top-list {
 }
 
 .footer__top-item {
@@ -1656,4 +1651,301 @@ html {
 
 .footer__bottom-link:hover {
   opacity: 1;
+}
+
+/* ===================================MEDIA==================================== */
+/* ===================================MEDIA==================================== */
+
+
+/* ==============================1200=================================== */
+
+@media screen and (max-width: 1200px) {
+
+  .header__body-inner {
+    padding-top: 50px;
+  }
+
+  .header__title {
+    font-size: 50px;
+  }
+
+  .header__image {
+    max-width: 450px;
+  }
+
+  .header__row {
+    margin-top: 0;
+  }
+}
+
+/* ==============================1140=================================== */
+
+@media screen and (max-width: 1200px) {
+
+  .header__top {
+    display: flex;
+    position: fixed;
+    min-width: 400px;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    background-color: #fff;
+    z-index: 100;
+    transform: translateX(100%);
+    transition: transform .3s;
+  }
+
+  .header__top--open {
+    transform: translateX(0);
+  }
+
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: #0000008c;
+    z-index: 50;
+    visibility: hidden;
+    opacity: 0;
+    transition: all .3s;
+  }
+  .overlay--show {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  .burger-menu {
+    position: fixed;
+    display: flex;
+    align-items: center;
+    right: 0;
+    z-index: 101;
+    width: 30px;
+    height: 20px;
+    transition-duration: 1s;
+    cursor: pointer;
+    width: 80px;
+    height: 60px;
+    border-bottom-left-radius: 50%;
+    margin: 0;
+    justify-content: center;
+  }
+
+  .burger-menu--follow {
+    background-color: #feddcf;
+    box-shadow: 0 0 20px 0 #4245513f;
+  }
+
+  .burger-menu--active {
+    background-color: #fff;
+    box-shadow: none;
+  }
+
+  .burger-menu span {
+    height: 3px;
+    width: 30px;
+    background-color: #424551;
+    border-radius: 3px;
+    position: absolute;
+    transition-duration: .25s;
+    transition-delay: .25s;  
+  }
+  
+  .burger-menu span::after {
+    left: 0;
+    position: absolute;
+    top: 10px;
+    height: 2px;
+    width: 30px;
+    background-color: #424551;
+    content: "";
+    border-radius: 2px;
+    transition-duration: .25s;
+    transition: transform .25s, top .25s .25s;
+  }
+
+  .burger-menu span::before {
+    left: 0;
+    position: absolute;
+    top: -10px;
+    height: 2px;
+    width: 30px;
+    background-color: #424551;
+    content: "";
+    border-radius: 2px;
+    transition-duration: .25s;
+    transition: transform .25s, top .25s .25s;
+  }
+
+  .burger-menu--active span {
+    transition-duration: 0.1s;
+    transition-delay: .25s;
+    background: transparent;
+  }
+
+  .burger-menu--active span::before {
+    transition: top .25s, transform .25s .25s;
+    top: 0px;
+    transform: rotateZ(-45deg);
+  }
+  
+  .burger-menu--active span::after {
+    transition: top 0.4s, transform .25s .25s;
+    top: 0px;
+    transform: rotateZ(45deg);
+  }
+
+  .header__top-inner {
+    display: flex;
+    height: 100%;
+    padding: 50px 0;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .header__logo {
+    margin: 0;
+  }
+
+  .header__nav {
+    margin: 0;
+  }
+
+  .header__nav-list {
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .header__list-item {
+    margin: 0;
+  }
+
+  .header__nav-link {
+    display: block;
+    padding: 30px;
+  }
+
+  .header__btn-box {
+    flex-direction: column-reverse;
+    padding: 0;
+  }
+
+  .header__top-btn {
+    margin: 10px 0 0;
+  }
+
+  /* ---------------------------HEADER------------------------------- */
+
+}
+
+/* ==============================1000=================================== */
+
+@media screen and (max-width: 1000px) {
+
+  .header__body-inner{
+    padding: 0;
+  }
+
+  .header__main {
+    justify-content: space-evenly;
+  }
+
+  .header__title {
+    font-size: 40px;
+  }
+
+  .header__image {
+    max-width: 400px;
+  }
+
+  .header__row {
+    display: none;
+    justify-content: space-evenly;
+  }
+  
+}
+
+/* ==============================850=================================== */
+
+@media screen and (max-width: 850px) {
+
+  .header__main {
+    display: block;
+  }
+
+  .header__content {
+    margin: 0;
+  }
+
+  .header__title {
+    font-size: 35px;
+  }
+
+  .header__image {
+    display: none;
+  }
+
+  .header__row {
+    display: none;
+  }
+}
+
+
+/* ==============================700=================================== */
+
+@media screen and (max-width: 700px) {
+  .header__top {
+    min-width: 100vw;
+  }
+}
+
+/* ==============================450=================================== */
+
+@media screen and (max-width: 450px) {
+
+  .header__content {
+    height: 55vh;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .header__content-buttons {
+    flex-direction: column;
+    margin-top: 40px;
+  }
+
+  .header__title {
+    text-align: center;
+  }
+
+  .header__play-btn {
+    margin: 0;
+  }
+
+  .header__content-buttons {
+    flex-direction: column;
+    width: 80%;
+    align-items: stretch;
+    text-align: center;
+    margin: 0;
+  }
+
+  .header__content-btn {
+    margin: auto 0;
+    width: 100%;
+  }
+
+  .header__content-btn:first-child {
+    margin-bottom: 20px;
+  }
+
+  .header__title {
+    font-size: 30px;
+  }
 }
