--- a/css/style.css
+++ b/css/style.css
@@ -376,6 +376,7 @@ html {
   margin-bottom: 20px;
   display: flex;
   align-items: center;
+  white-space: nowrap;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.5;
@@ -432,12 +433,13 @@ html {
 .directions__filter-box {
   /* max-width: 767px; */
   display: flex;
-  margin-bottom: 56px;
+  margin-bottom: 40px;
+  flex-wrap: wrap;
   /* justify-content: space-between; */
 }
 
 .directions__filter-item {
-  margin-right: 45px;
+  margin: 0 45px 15px 0;
 }
 
 .directions__filter-item:last-child {
@@ -445,6 +447,7 @@ html {
 }
 
 .directions__filter-btn {
+  white-space: nowrap;
   color: #9a9ca5;
   border: 1px solid #9a9ca5;
 }
@@ -500,7 +503,7 @@ html {
 
 .directins__image-box img {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 }
 
 .directins__link-content {
@@ -1676,9 +1679,68 @@ html {
   .header__row {
     margin-top: 0;
   }
+
+  /* ------------------------------ABOUT------------------------------ */
+
+  .main__about {
+    padding: 65px 0 80px;
+  }
+
+  .heading__subtitle {
+    font-size: 14px;
+  }
+
+  .heading__title {
+    font-size: 36px;
+  }
+
+  .about__text {
+    font-size: 14px;
+  }
+
+  .about__text--accent {
+    font-size: 16px;
+    margin: 35px 0 16px;
+  }
+
+  .about__content-btn {
+    margin-top: 42px;
+  }
+
+  .about__createx {
+    margin-bottom: 100px;
+  }
+
+  .about__values {
+    justify-content: flex-start;
+  }
+
+  .about__image-box {
+    max-width: 600px;
+    margin-right: 30px;
+  }
+
+  .about__number span {
+    font-size: 35px;
+  }
+
+  /* ------------------------------DIRECTIONS------------------------------------ */
+
+    .directions__list {
+      gap: 20px 10px;
+    }
+
+    .directins__link-content {
+      padding: 24px 5px 5px;
+    }
+
+    .directions__heading {
+      margin-bottom: 40px;
+    }
+
 }
 
-/* ==============================1140=================================== */
+/* ==============================1200=================================== */
 
 @media screen and (max-width: 1200px) {
 
@@ -1757,11 +1819,11 @@ html {
     left: 0;
     position: absolute;
     top: 10px;
-    height: 3px;
+    height: 2px;
     width: 30px;
     background-color: #424551;
     content: "";
-    border-radius: 3px;
+    border-radius: 2px;
     transition-duration: .25s;
     transition: transform .25s, top .25s .25s;
   }
@@ -1770,11 +1832,11 @@ html {
     left: 0;
     position: absolute;
     top: -10px;
-    height: 3px;
+    height: 2px;
     width: 30px;
     background-color: #424551;
     content: "";
-    border-radius: 3px;
+    border-radius: 2px;
     transition-duration: .25s;
     transition: transform .25s, top .25s .25s;
   }
@@ -1865,12 +1927,41 @@ html {
     display: none;
     justify-content: space-evenly;
   }
+
+    /* ------------------------------ABOUT------------------------------ */
   
+  .heading__subtitle {
+    font-size: 14px;
+  }
+
+  .heading__title {
+    font-size: 28px;
+  }
+
+  .about__text {
+    font-size: 14px;
+  }
+
+  .about__text--accent {
+    font-size: 16px;
+  }
+
+  .about__createx-content {
+    min-width: 400px;
+  }
+
+  .about__createx img {
+    max-width: 400px;
+  }
+
+  /* ------------------------------DIRECTIONS------------------------------------ */
+
+
 }
 
-/* ==============================850=================================== */
+/* ==============================900=================================== */
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 900px) {
 
   .header__main {
     display: block;
@@ -1891,6 +1982,34 @@ html {
   .header__row {
     display: none;
   }
+
+    /* ------------------------------ABOUT------------------------------ */
+
+  .about__createx img,
+  .about__image-box {
+    display: none;
+  }
+
+  .about__numbers {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+
+  }
+
+  .about__number {
+    margin: 0;
+  }
+
+  .about__createx {
+    margin-bottom: 90px;
+  }
+  /* ------------------------------DIRECTIONS------------------------------------ */
+
+  .directions__list {
+    grid-template: repeat(3, auto) / repeat(2, 1fr);
+  }
+
 }
 
 
@@ -1900,11 +2019,19 @@ html {
   .header__top {
     min-width: 100vw;
   }
+
+  .directions__list {
+    grid-template: none;
+  }
+
+  .directions__list-item--empty {
+    display: none;
+  }
 }
 
-/* ==============================450=================================== */
+/* ==============================500=================================== */
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 500px) {
 
   .header__content {
     height: 55vh;
@@ -1928,6 +2055,8 @@ html {
     margin: 0;
   }
 
+  /* ------------------------------ABOUT------------------------------ */
+
   .header__content-buttons {
     flex-direction: column;
     width: 80%;
@@ -1948,4 +2077,28 @@ html {
   .header__title {
     font-size: 30px;
   }
+
+  .about__content-buttons {
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+  }
+
+  .about__content-btn {
+    margin: 0;
+    width: 80%;
+  }
+
+  .about__content-btn:first-child {
+    margin: 30px 0 20px;
+  }
+
+  .about__values {
+    justify-content: space-around
+  }
+
+  /* ------------------------------DIRECTIONS------------------------------------ */
+
 }
