--- a/css/style.css
+++ b/css/style.css
@@ -605,6 +605,11 @@ html {
   border-radius: 4px;
 }
 
+.cert__image-box img {
+  width: 100%;
+  height: 100%;
+}
+
 .cert__inner::before {
   content: "";
   display: block;
@@ -661,6 +666,7 @@ html {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: top;
 }
 
 .team__info {
@@ -765,6 +771,10 @@ html {
   margin-right: 30px;
 }
 
+.team__dots {
+  display: none;
+}
+
 /*======================================================TESTIMONIALS======================================================================*/
 /*======================================================TESTIMONIALS======================================================================*/
 
@@ -846,6 +856,11 @@ html {
 .testimonials__avatar {
   border-radius: 50%;
   overflow: hidden;
+}
+
+.testimonials__avatar img {
+  width: 100%;
+  height: 100%;
 }
 
 .testimonials__user-info {
@@ -1738,6 +1753,10 @@ html {
       margin-bottom: 40px;
     }
 
+    .directions {
+      padding-bottom: 80px;
+    }
+
 }
 
 /* ==============================1200=================================== */
@@ -1954,9 +1973,24 @@ html {
     max-width: 400px;
   }
 
-  /* ------------------------------DIRECTIONS------------------------------------ */
+  /* ------------------------------CERTIFICATE------------------------------------ */
 
+  .cert__heading {
+    text-align: center;
+  }
 
+  .cert__inner {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .cert__image-box {
+    margin: 30px 0 0;
+  }
+
+  .team {
+    padding: 140px 0 80px;
+  }
 }
 
 /* ==============================900=================================== */
@@ -2009,15 +2043,19 @@ html {
   .directions__list {
     grid-template: repeat(3, auto) / repeat(2, 1fr);
   }
+
 }
 
 
 /* ==============================700=================================== */
 
 @media screen and (max-width: 700px) {
+  
   .header__top {
     min-width: 100vw;
   }
+
+  /* ------------------------------DIRECTIONS------------------------------ */
 
   .directions__list {
     grid-template: none;
@@ -2029,6 +2067,103 @@ html {
 
   .directions__filter-item {
     margin-right: 25px;
+  } 
+
+  /* ------------------------------TEAM------------------------------ */
+
+  .team__heading {
+    margin-bottom: 40px;
+  }
+
+  .team__arrows {
+    display: none;
+  }
+
+  .team__dots {
+    display: block;
+  }
+
+  .team__image-box {
+    max-width: 250px;
+    margin: 0 auto 16px auto;
+  }
+
+  .team__slider {
+    margin-bottom: 10px;
+  }
+
+  .team__slide {
+    padding: 0 10px;
+}
+
+  .team__dots .slick-dots {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .team__dots li {
+    margin-right: 12px;
+  }
+  
+  .team__dots button {
+    background-color: transparent;
+    font-size: 0;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+  }
+
+  .team__dots button::before {
+    content: "";
+    width: 6px;
+    height: 6px;
+    border-radius: 6px;
+    background-color: #b3b7bc;
+    transition: all 0.3s;
+  }
+  
+  .team__dots .slick-active button::before {
+    background-color: #424551;
+  }
+
+  /* ------------------------------TESTIMONIALS------------------------------ */
+
+  .testimonials__heading {
+    margin-bottom: 40px;
+  }
+
+  .testimonials__slider-wrapper {
+    padding: 0;
+    margin-bottom: 30px;
+  }
+
+  .testimonials__slide {
+    padding: 30px;
+  }
+
+  .testimonials__slide-inner {
+    padding-left: 35px;
+  }
+
+  .testimonials__quote {
+    font-size: 18px;
+    margin-bottom: 16px;
+  }
+
+  .testimonials__quote::before {
+    left: -45px;
+    width: 25px;
+  }
+
+  .testimonials__avatar {
+    width: 60px;
+    height: 60px;
+  }
+
+  .testimonials__arrow {
+    display: none;
   }
 }
 
@@ -2102,6 +2237,36 @@ html {
     justify-content: space-around
   }
 
-  /* ------------------------------DIRECTIONS------------------------------------ */
+   /* ------------------------------TESTIMONIALS------------------------------ */
+
+  .testimonials__slider-wrapper {
+    margin-bottom: 20px;
+  }
+
+  .testimonials__slide {
+    padding: 20px 10px;
+  }
+
+  /* .testimonials__slide-inner {
+    padding-left: 35px;
+  } */
+
+  .testimonials__quote {
+    font-size: 16px;
+    margin-bottom: 10px;
+  }
+
+  .testimonials__quote::before {
+    left: -30px;
+    width: 20px;
+  }
+
+  .testimonials__dots li {
+    margin-right: 6px;
+  } 
+
+  .testimonials__dots button::before {
+    width: 20px;
+  }
 
 }
