--- a/css/style.css
+++ b/css/style.css
@@ -2087,13 +2087,13 @@ html {
     max-width: 250px;
     margin: 0 auto 16px auto;
   }
-  
-  .team__slider .slick-track {
-    padding: 5px;
-  }
 
   .team__slider {
     margin-bottom: 10px;
+  }
+  
+  .team__slider .slick-track {
+    padding: 5px;
   }
 
   .team__slide {
@@ -2107,7 +2107,7 @@ html {
   }
   
   .team__dots li {
-    margin-right: 12px;
+    margin-right: 0;
   }
   
   .team__dots button {
@@ -2117,6 +2117,7 @@ html {
     height: 30px;
     display: flex;
     align-items: center;
+    justify-content: center;
   }
 
   .team__dots button::before {
@@ -2133,6 +2134,10 @@ html {
   }
 
   /* ------------------------------TESTIMONIALS------------------------------ */
+
+  .testimonials::before {
+    display: none;
+  }
 
   .testimonials__heading {
     margin-bottom: 40px;
