--- a/css/style.css
+++ b/css/style.css
@@ -1558,6 +1558,10 @@ html {
   margin-right: 0;
 }
 
+.footer__sotials-link {
+  display: block;
+}
+
 .footer__sotials-link path {
   transition: all 0.3s;
 }
@@ -1572,6 +1576,7 @@ html {
   text-transform: uppercase;
   white-space: nowrap;
   margin-bottom: 12px;
+  pointer-events: none;
 }
 
 .footer__top-col:last-child .footer__top-title {
@@ -1979,7 +1984,28 @@ html {
 
 @media screen and (max-width: 1100px) {
 
+  .footer__top-inner {
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
+
+  .footer__top-col:first-child {
+    max-width: none;
+  }
+
+  .footer__top-col {
+    margin-bottom: 30px;
+  }
   
+  .footer__top-col:last-child {
+    flex-grow: 1;
+    max-width: none;
+    margin-bottom: 0;
+  }
+
+  .footer__form {
+    max-width: 315px;
+  }
 
 }
 
@@ -2202,6 +2228,28 @@ html {
     background-color: #fff8aa;
   }
 
+  .info {
+    margin-bottom: 80px;
+  }
+
+  .info__inner {
+    flex-direction: column;
+    align-items: start;
+  }
+
+  .info__content {
+    margin: 0 0 50px 0;
+  }
+
+  .info__contact {
+    margin-bottom: 30px;
+  }
+
+  .info__map {
+    max-width: 100%;
+    height: 200px;
+  }
+
   .questions__image {
     display: none;
   }
@@ -2360,6 +2408,10 @@ html {
     left: -30px;
   }
 
+  .footer__top-list {
+    display: block;
+  }
+
 }
 
 /* ==============================550=================================== */
@@ -2499,6 +2551,26 @@ html {
     margin-bottom: 20px;
   }
 
+  .info__contact-item {
+    font-size: 16px;
+  }
+
+  .info__sotials-heading {
+    font-size: 14px;
+  }
+
+  .info__sotials-row {
+    justify-content: space-between;
+  }
+
+  .info__sotials-item {
+    margin: 0;
+  }
+
+  .main__questions {
+    margin-bottom: 100px;
+  }
+
   .questions__form-row {
     flex-direction: column;
     margin: 0;
@@ -2521,8 +2593,40 @@ html {
   }
 
   .questions__btn {
-    margin-top: 15px;
+    margin-top: 30px;
     width: 80%;
+  }
+
+  .footer__top-inner {
+    flex-direction: column;
+    padding: 40px 0;
+  }
+
+  .footer__top-title--slide {
+    margin: 0;
+    pointer-events: auto;
+  }
+
+  .footer__top-list {
+    display: none;
+  }
+
+  .footer__sotials-row {
+    justify-content: space-between;
+    max-width: 290px;
+  }
+
+  .footer__sotials-item {
+    margin: 0;
+  }
+
+  .footer__bottom-inner {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  
+  .footer__bottom-link {
+    margin-bottom: 15px;
   }
 
 }
